# mpl_chord_diagram

./: README.md  __init__.py  _info.py  chord_diagram.py  example.py  matplotlib-chord.py  pyproject.toml  setup.cfg  setup.py  utilities.py
